# gitauto

./: .coverage  .env  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile-new  FIX_SUMMARY.md  GEMINI.md  GITHUB_UTILS_TEST_SUMMARY.md  LICENSE  README.md  README_start_tests.md  TEST_COVERAGE_SUMMARY.md  basic_test.py  check_function.py  check_implementation.py  cloudformation.yml  commands.py  comprehensive_test.py  config.py  conftest.py  debug_ansi.py  debug_clean_logs.py  debug_clean_logs_steps.py  debug_minimize.py  debug_namespace.py  debug_session_starts.py  debug_specific.py  debug_test.py  diffs.py  final_test.py  function_test.py  history.py  (+102 more)
.circleci/: config.yml
.claude/: settings.json
.claude/hooks/: check-comment-line-breaks.sh  check-logger-coverage.sh  no-deflection.sh  no-git-add.sh  no-skip-hooks.sh  no-spent-opener.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/scripts/: check_table_size.sh  extract-social-posts.js  post-hackernews.js  post-linkedin.js  post-twitter.js  post-x.js  vacuum_table.sh
.github/workflows/: check-billing-consistency.yml  check-database-size.yml  ci.yml  coverage.yml  daily-usage-report.yml  deployment.yml  hiroshi.yml  keep-supabase-active.yml  main-deployment.yml  main-pytest.yml  main.yml  nikita-test.yml  nikita.yml  node-test.yml  post-sns.yml  pytest.yml  python-pytest.yml  python_test.yml  stage-deployment.yml  stage-pytest.yml  stage-test.yml  stage.yml  x-post-draft.yml
agent/: commands.py  repomap.py  sendchat.py
agent/coders/: __init__.py  base_coder.py  editblock_func_prompts.py  udiff_prompts.py  wholefile_coder.py
agent/models/: model.py
app/: main.py
app/services/: history.py  inputoutput.py  prompts.py  repo.py  test.py
coders/: base_coder.py  editblock_coder.py  editblock_func_coder.py  search_replace.py  single_wholefile_func_coder.py  udiff_coder.py  wholefile_coder.py  wholefile_func_coder.py
config/: settings.py
constants/: agent.py  aws.py  ci.py  claude.py  dependency_files.py  efs.py  files.py  general.py  google_ai.py  messages.py  models.py  mongoms.py  node.py  requests.py  settings.py  shell.py  slack.py  supabase.py  test_google_ai.py  test_models.py  testing.py  triggers.py  urls.py  website.py
constants/system_messages/: setup_handler.py
docs/: jira_webhook_setup.md
github/files/: delete_file_by_sha.py
infrastructure/: cloudwatch-alarms-sns.yml  deploy-lambda-with-vpc-efs.yml  deploy-lambda.yml  deploy-monitoring.yml  eventbridge-scheduler.yml  setup-infra.yml  setup-vpc-nat-efs.yml  setup-vpc-nat-s3.yml  test_deploy_lambda.py
models/: openai.py
pages/: index.js
payloads/: added.json  created.json  deleted.json  labeled.json  mock_deletion_event.json  mock_installation_event.json  removed.json  stripeSubscriptionsList.json
payloads/anthropic/: agent_pc_large_input.json  llm_request_2816_input_content_raw.json  messages.json  (+4 more)
services/: chat_with_agent.py  chat_with_agent_test.py  chat_with_model.py  check_run_handler.py  get_fallback_models.py  gitauto_handler.py  issue_commenter.py  jira_webhook_config.py  jira_webhook_listener.py  llm_result.py  model_selection.py  pull_request_handler.py  review_run_handler.py  screenshot_handler.py  test_chat_with_agent.py  test_chat_with_model.py  test_get_fallback_models.py  test_llm_result.py  test_model_selection.py  webhook_handler.py
tests/: README.md  constants.py  constants_new.py  create_github_issue.py  test_branch_manager.py  test_github_manager.py  test_main.py  test_push_trigger_prompt.py  test_stripe.py  test_supabase_users.py
utils/: __init__.py  build_setup_pr_body.py  colorize_log.py  detect_new_line.py  env.py  extract_urls.py  file_manager.py  generate_branch_name.py  handle_exceptions.py  logging.py  parse_urls.py  progress_bar.py  resource_monitor.py  test_build_setup_pr_body.py  test_colorize_log.py  test_detect_new_line.py  test_env.py  test_extract_urls.py  test_generate_branch_name.py  test_progress_bar.py  text_copy.py  timer.py
(+1645 files in other folders)
