[project]
name = "GitAuto"
version = "1.73.0"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.77.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "aws_lambda_powertools==3.24.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.12.3",
    "boto3==1.42.21",
    "botocore==1.42.21",
    "cachetools==6.2.6",
    "certifi==2024.7.4",
    "cffi==2.0.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.7",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.7",
    "Deprecated==1.3.1",
    "deprecation==2.1.0",
    "distro==1.9.0",
    "dnspython==2.6.1",
    "docstring_parser==0.17.0",
    "duckduckgo_search==8.1.1",
    "email_validator==2.2.0",
    "exceptiongroup==1.2.2",
    "fastapi==0.128.0",
    "fsspec==2026.3.0",
    "google-auth==2.49.2",
    "google-genai==1.73.0",
    "gotrue==2.12.3",
    "gql==3.5.0",
    "graphql-core==3.2.6",
    "greenlet==3.4.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "html2text==2025.4.15",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.7",
    "inflection==0.5.1",
    "isort==5.13.2",
    "Jinja2==3.1.6",
    "jiter==0.14.0",
    "jmespath==1.0.1",
    "json-with-comments==1.2.10",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "lxml==6.0.4",
    "mangum==0.17.0",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "mmh3==5.2.1",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "mypy-boto3-codebuild==1.42.3",
    "mypy-boto3-ec2==1.42.38",
    "mypy-boto3-lambda==1.42.37",
    "mypy-boto3-logs==1.42.10",
    "mypy-boto3-s3==1.42.80",
    "mypy-boto3-scheduler==1.42.3",
    "networkx==3.6.1",
    "openai==1.107.3",
    "orjson==3.11.8",
    "packaging==24.1",
    "platformdirs==4.2.2",
    "playwright==1.50.0",
    "postgrest==0.19.3",
    "primp==1.1.3",
    "propcache==0.4.1",
    "psutil==7.0.0",
    "psycopg2-binary==2.9.11",
    "pyasn1==0.6.3",
    "pyasn1_modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "pyee==12.1.1",
    "PyGithub==2.3.0",
    "Pygments==2.18.0",
    "pyiceberg==0.11.1",
    "PyJWT==2.12.1",
    "PyNaCl==1.6.2",
    "pyparsing==3.3.2",
    "pyroaring==1.0.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "PyYAML==6.0.2",
    "realtime==2.28.3",
    "referencing==0.37.0",
    "regex==2026.4.4",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "resend==2.11.0",
    "rich==13.7.1",
    "rpds-py==0.30.0",
    "s3transfer==0.16.0",
    "sentry-sdk==2.12.0",
    "shellingham==1.5.4",
    "six==1.16.0",
    "slack_sdk==3.35.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "starlette==0.50.0",
    "storage3==0.11.3",
    "StrEnum==0.4.15",
    "strictyaml==1.7.3",
    "stripe==14.1.0",
    "supabase==2.11.0",
    "supafunc==0.9.4",
    "sympy==1.14.0",
    "tenacity==9.1.4",
    "tiktoken==0.12.0",
    "toml==0.10.2",
    "tomlkit==0.13.0",
    "tqdm==4.66.5",
    "typer==0.12.3",
    "typing-inspection==0.4.2",
    "typing_extensions==4.14.1",
    "ujson==5.12.0",
    "urllib3==2.6.3",
    "uvicorn==0.34.0",
    "uvloop==0.22.1",
    "websockets==15.0.1",
    "wrapt==2.1.2",
    "yarl==1.23.0",
    "zstandard==0.25.0",
]

[dependency-groups]
dev = [
    "autoflake==2.3.1",
    "autopep8==2.3.2",
    "black==24.8.0",
    "boto3-stubs==1.40.2",
    "botocore-stubs==1.38.46",
    "cfn-lint==1.48.1",
    "coverage==7.8.0",
    "Faker==24.14.1",
    "fastapi-cli==0.0.5",
    "pre-commit==3.8.0",
    "pylint==3.2.6",
    "pyright==1.1.409",
    "pytest==8.3.3",
    "pytest-asyncio==0.26.0",
    "pytest-cov==6.0.0",
    "pytest-xdist==3.8.0",
    "ruff==0.12.1",
    "types-awscrt==0.27.5",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-html5lib==1.1.11.20251117",
    "types-psycopg2==2.9.21.20250516",
    "types-s3transfer==0.13.0",
    "types-webencodings==0.5.0.20251108",
]
